--- a/config/config.ini
+++ b/config/config.ini
@@ -1,14 +1,14 @@
 [DEFAULT]
-batch_smooth_test=True
-gaussian_pivot=False
-lanczos=True
-square_root_couveignes=False
-large_primes_constant=100
-block_size=8
-poly_search_nb_poly_coarse_eval=100
-poly_search_nb_poly_precise_eval=50
-poly_search_prime_bound=300
-poly_search_nb_roots=3
-poly_search_multiplier=1
+FLAG_USE_BATCH_SMOOTH_TEST=True
+FLAG_GAUSSIAN_PIVOT=False
+FLAG_LANCZOS=True
+FLAG_SQUARE_ROOT_COUVEIGNES=False
+LARGE_PRIME_CONST=100
+BLOCK_SIZE=8
+NB_POLY_COARSE_EVAL=100
+NB_POLY_PRECISE_EVAL=50
+PRIME_BOUND=300
+NB_ROOTS=3
+MULTIPLIER=1
 NB_CPU_POLY_SELECTION=4
 NB_CPU_SIEVE=4
